--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,5 @@
 packages:
   - ./
-catalog:
-  lint-staged: ^16.0.0
-  simple-git-hooks: ^2.13.0
 catalogs:
   frontend:
     '@vueuse/core': ^13.2.0
@@ -13,11 +10,16 @@ catalogs:
     '@nuxt/eslint': 1.3.1
     eslint: ^9.26.0
     eslint-plugin-format: ^1.0.1
+    lint-staged: ^16.0.0
+    simple-git-hooks: ^2.13.0
   nuxt:
     '@nuxt/fonts': 0.11.3
     '@nuxt/image': 1.10.0
     '@vueuse/nuxt': ^13.2.0
     nuxt: ^3.17.3
+  server:
+    '@nuxthub/core': ^0.8.27
+    wrangler: ^4.14.4
   unocss:
     '@iconify/utils': ^2.3.0
     '@unocss/eslint-plugin': ^66.1.1
@@ -28,4 +30,6 @@ catalogs:
     unocss-preset-onmax: ^1.0.0-beta.19
     unocss-preset-scale-px: 1.0.0-beta.19
 onlyBuiltDependencies:
+  - sharp
   - simple-git-hooks
+  - workerd
