--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build application
         run: pnpm build
         env:
-          NUXT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
 
       - name: Deploy to NuxtHub
         uses: nuxt-hub/action@v1
