--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "typecheck": "nuxt typecheck",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@nuxt/fonts": "catalog:nuxt",
     "@nuxt/image": "catalog:nuxt",
     "@octokit/rest": "catalog:server",
     "@vueuse/core": "catalog:frontend",
+    "drizzle-orm": "catalog:server",
     "nuxt": "catalog:nuxt",
     "valibot": "catalog:server",
     "vue": "catalog:frontend",
@@ -34,6 +36,7 @@
     "@unocss/reset": "catalog:unocss",
     "@vueuse/core": "catalog:frontend",
     "@vueuse/nuxt": "catalog:nuxt",
+    "drizzle-kit": "catalog:server",
     "eslint": "catalog:lint",
     "eslint-plugin-format": "catalog:lint",
     "lint-staged": "catalog:lint",
