--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,6 +20,8 @@ catalogs:
   server:
     '@nuxthub/core': ^0.8.27
     '@octokit/rest': ^21.1.1
+    drizzle-kit: ^0.31.1
+    drizzle-orm: ^0.43.1
     valibot: ^1.1.0
     wrangler: ^4.14.4
   unocss:
