chore: moved to folders

--- a/package.json
+++ b/package.json
@@ -1,62 +1,30 @@
 {
-  "name": "nuxt-app",
+  "name": "nimiq-feedback",
   "type": "module",
   "private": true,
   "packageManager": "pnpm@10.11.0",
   "scripts": {
-    "build": "nr build:feedback-widget && nuxt build",
-    "build:widget:external": "vite build --config vite.widget.external.config.ts",
-    "build:widget:full": "vite build --config vite.widget.full.config.ts",
-    "build:feedback-widget": "pnpm build:widget:external && pnpm build:widget:full",
-    "nuxt:dev": "nuxt dev",
-    "play": "nr build:widget:full && pnpm -C playground run dev",
-    "dev": "pnpm run --stream \"/^(nuxt:dev|play)$/\"",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "prepare": "nuxt prepare",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "typecheck": "nuxt typecheck && nr -r typecheck && vue-tsc --project tsconfig.widget.json --noEmit",
-    "db:generate": "drizzle-kit generate"
-  },
-  "dependencies": {
-    "@nuxt/fonts": "catalog:nuxt",
-    "@nuxt/image": "catalog:nuxt",
-    "@octokit/rest": "catalog:server",
-    "@vueuse/core": "catalog:frontend",
-    "drizzle-orm": "catalog:server",
-    "nuxt": "catalog:nuxt",
-    "reka-ui": "catalog:frontend",
-    "valibot": "catalog:server",
-    "vue": "catalog:frontend",
-    "vue-router": "catalog:frontend"
+    "build": "nr -r build",
+    "play": "pnpm -C widget build && pnpm -C playground run dev",
+    "prepare": "pnpm -C backend prepare",
+    "postinstall": "nr prepare",
+    "dev": "nr -r dev",
+    "lint": "eslint . && pnpm -C backend lint",
+    "lint:fix": "eslint . --fix && pnpm -C backend lint:fix",
+    "typecheck": "nr -r typecheck"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:lint",
     "@iconify/utils": "catalog:unocss",
-    "@nuxt/eslint": "catalog:lint",
-    "@nuxthub/core": "catalog:server",
-    "@rollup/plugin-replace": "catalog:",
     "@unocss/eslint-plugin": "catalog:unocss",
-    "@unocss/nuxt": "catalog:unocss",
-    "@unocss/reset": "catalog:unocss",
-    "@vitejs/plugin-vue": "catalog:bundle",
-    "@vueuse/core": "catalog:frontend",
-    "@vueuse/nuxt": "catalog:nuxt",
-    "drizzle-kit": "catalog:server",
     "eslint": "catalog:lint",
     "eslint-plugin-format": "catalog:lint",
     "lint-staged": "catalog:lint",
     "nimiq-css": "catalog:unocss",
     "simple-git-hooks": "catalog:lint",
-    "typescript": "catalog:types",
     "unocss": "catalog:unocss",
     "unocss-preset-onmax": "catalog:unocss",
-    "unocss-preset-scale-px": "catalog:unocss",
-    "vite": "catalog:bundle",
-    "vue-tsc": "catalog:types",
-    "wrangler": "catalog:server"
+    "unocss-preset-scale-px": "catalog:unocss"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
