--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,18 +1,17 @@
 packages:
   - ./
   - ./playground
-catalog:
-  '@rollup/plugin-replace': ^6.0.2
+  - ./backend
+  - ./widget
 catalogs:
   bundle:
+    '@rollup/plugin-replace': ^6.0.2
     '@vitejs/plugin-vue': ^5.2.3
     vite: ^6.2.4
     vite-plugin-vue-devtools: ^7.7.2
   frontend:
-    '@vueuse/core': ^13.2.0
     reka-ui: ^2.2.1
     vue: ^3.5.13
-    vue-router: ^4.5.1
   lint:
     '@antfu/eslint-config': ^4.13.0
     '@nuxt/eslint': 1.3.1
@@ -38,7 +37,6 @@ catalogs:
     '@vue/tsconfig': ^0.7.0
     typescript: ^5.8.3
     vue-tsc: ^2.2.8
-
   unocss:
     '@iconify/utils': ^2.3.0
     '@unocss/eslint-plugin': ^66.1.1
@@ -49,6 +47,8 @@ catalogs:
     unocss-preset-onmax: ^1.0.0-beta.19
     unocss-preset-scale-px: 1.0.0-beta.19
 onlyBuiltDependencies:
+  - '@parcel/watcher'
+  - esbuild
   - sharp
   - simple-git-hooks
   - workerd
