--- a/widget/tsconfig.json
+++ b/widget/tsconfig.json
@@ -1,14 +1,11 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "jsx": "preserve",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"],
-      "@/*": ["./*"],
-      "#shared": ["./shared"],
-      "#imports": ["./.nuxt/imports"]
+      "@/*": ["./*"]
     },
     "resolveJsonModule": true,
     "types": ["vite/client"],
@@ -17,9 +14,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "app/**/*.ts",
-    "app/**/*.d.ts",
-    "app/**/*.vue",
-    "app/types/**/*.d.ts"
+    "env.d.ts",
+    "./src/**/*.vue"
   ]
 }
