feat: update backend path aliases and improve form submission handling

--- a/widget/tsconfig.json
+++ b/widget/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "#backend/*": ["../backend/shared/*"]
     },
     "resolveJsonModule": true,
     "types": ["vite/client"],
