--- a/widget/package.json
+++ b/widget/package.json
@@ -7,7 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "build-only": "vite build",
-    "typecheck": "vue-tsc --build --noEmit"
+    "typecheck": "vue-tsc --build --noEmit",
+    "dev": "vite build --watch",
+    "dev:widget": "vite dev"
   },
   "dependencies": {
     "reka-ui": "catalog:frontend",
@@ -18,7 +20,6 @@
     "@rollup/plugin-replace": "catalog:bundle",
     "@tsconfig/node22": "catalog:types",
     "@types/node": "catalog:types",
-    "@unocss/reset": "catalog:unocss",
     "@vitejs/plugin-vue": "catalog:bundle",
     "@vue/tsconfig": "catalog:types",
     "nimiq-css": "catalog:unocss",
