--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "types": ["vite/client"]
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
