--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
 catalog:
   '@vueuse/core': ^13.2.0
   consola: ^3.4.2
+  vue-i18n: ^11.1.3
 catalogs:
   bundle:
     '@rollup/plugin-replace': ^6.0.2
