fix: Update NUXT_GITHUB_TOKEN to use secrets for enhanced security

--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
           NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_GITHUB_TOKEN: ${{ vars.NUXT_GITHUB_TOKEN }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
           NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
 
       - name: Ensure NuxtHub module is installed
@@ -43,7 +43,7 @@ jobs:
         env:
           NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
           NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_GITHUB_TOKEN: ${{ vars.NUXT_GITHUB_TOKEN }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
           NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
 
       - name: Deploy to NuxtHub
