--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -37,6 +37,11 @@ jobs:
 
       - name: Ensure NuxtHub module is installed
         run: pnpx nuxthub@latest ensure
+        env:
+          NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
+          NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
+          NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
 
       - name: Build application
         run: pnpm build
