feat: move playground to backend and add documentation

--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -32,24 +32,27 @@ jobs:
         env:
           NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
           NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
           NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
+          NUXT_SLACK_WEBHOOK_URL: ${{ secrets.NUXT_SLACK_WEBHOOK_URL }}
 
       - name: Ensure NuxtHub module is installed
         run: pnpx nuxthub@latest ensure
         env:
           NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
           NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
           NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
+          NUXT_SLACK_WEBHOOK_URL: ${{ secrets.NUXT_SLACK_WEBHOOK_URL }}
 
       - name: Build application
         run: pnpm build
         env:
           NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
           NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
           NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
+          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
+          NUXT_SLACK_WEBHOOK_URL: ${{ secrets.NUXT_SLACK_WEBHOOK_URL }}
 
       - name: Deploy to NuxtHub
         uses: nuxt-hub/action@v1
