--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,5 +5,8 @@ NUXT_GITHUB_OWNER=
 NUXT_GITHUB_REPO=
 NUXT_GITHUB_TOKEN=
 
+# Slack - Where the feedback will be sent
+NUXT_SLACK_WEBHOOK_URL=
+
 # Base URL for the retrieving images
 NUXT_PRODUCTION_URL=
