--- a/widget/tsconfig.json
+++ b/widget/tsconfig.json
@@ -10,6 +10,7 @@
     },
     "resolveJsonModule": true,
     "declaration": true,
+    "esModuleInterop": true,
     "isolatedModules": true,
     "skipLibCheck": true
   },
