--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,9 @@ packages:
   - ./
   - ./backend
   - ./widget
+catalog:
+  eslint-plugin-pnpm-catalog: ^0.0.1
+  nimiq-icons: 1.0.0-beta.50
 catalogs:
   bundle:
     '@rollup/plugin-replace': ^6.0.2
@@ -9,51 +12,51 @@ catalogs:
     vite: ^6.3.5
     vite-plugin-vue-devtools: ^7.7.6
   cli:
-    pncat: ^0.2.3
+    pncat: ^0.2.4
   dev:
-    '@nuxt/scripts': ^0.11.7
+    '@nuxt/scripts': ^0.11.8
   frontend:
-    reka-ui: ^2.2.1
-    vue: ^3.5.14
+    reka-ui: ^2.3.0
+    vue: ^3.5.16
   lint:
     '@antfu/eslint-config': ^4.13.2
     '@nuxt/eslint': 1.4.1
-    eslint: ^9.27.0
+    eslint: ^9.28.0
     eslint-plugin-format: ^1.0.1
-    lint-staged: ^16.0.0
+    lint-staged: ^16.1.0
     simple-git-hooks: ^2.13.0
   node:
     consola: ^3.4.2
   nuxt:
     '@nuxt/fonts': ^0.11.4
     '@nuxt/image': ^1.10.0
-    '@vueuse/nuxt': ^13.2.0
+    '@vueuse/nuxt': ^13.3.0
     nuxt: ^3.17.4
   server:
     '@nuxthub/core': ^0.8.27
     '@octokit/rest': ^22.0.0
     drizzle-kit: ^0.31.1
-    drizzle-orm: ^0.43.1
+    drizzle-orm: ^0.44.1
     valibot: ^1.1.0
-    wrangler: ^4.16.1
+    wrangler: ^4.18.0
   style:
-    '@unocss/nuxt': ^66.1.2
+    '@unocss/nuxt': ^66.1.3
   tools:
-    '@antfu/ni': ^24.4.0
+    '@antfu/ni': ^25.0.0
   types:
     '@tsconfig/node22': ^22.0.2
-    '@types/node': ^22.15.21
+    '@types/node': ^22.15.29
     '@vue/tsconfig': ^0.7.0
     typescript: ^5.8.3
     vue-tsc: ^2.2.10
   unocss:
     '@iconify/utils': ^2.3.0
-    '@unocss/eslint-plugin': ^66.1.2
-    nimiq-css: ^1.0.0-beta.37
-    unocss: ^66.1.2
-    unocss-preset-onmax: ^1.0.0-beta.25
+    '@unocss/eslint-plugin': ^66.1.3
+    nimiq-css: ^1.0.0-beta.50
+    unocss: ^66.1.3
+    unocss-preset-onmax: ^1.0.0-beta.33
   utils:
-    '@vueuse/core': ^13.2.0
+    '@vueuse/core': ^13.3.0
 ignoredBuiltDependencies:
   - pncat
 onlyBuiltDependencies:
