--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - ./backend
   - ./widget
 catalog:
+  eslint-plugin-pnpm: ^0.3.1
   eslint-plugin-pnpm-catalog: ^0.0.1
   nimiq-icons: 1.0.0-beta.53
   nuxt-safe-runtime-config: ^0.0.2
@@ -66,5 +67,6 @@ onlyBuiltDependencies:
   - esbuild
   - sharp
   - simple-git-hooks
+  - unrs-resolver
   - vue-demi
   - workerd
