chore: update NuxtHub deployment workflow with improved naming and simplified environment variables

--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -5,9 +5,6 @@ jobs:
   deploy:
     name: Deploy to NuxtHub
     runs-on: ubuntu-latest
-    environment:
-      name: ${{ github.ref == 'refs/heads/main' && 'production' || 'preview' }}
-      url: ${{ steps.deploy.outputs.deployment-url }}
     permissions:
       contents: read
       id-token: write
@@ -26,25 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-        env:
-          NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
-          NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
-          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
-          NUXT_SLACK_WEBHOOK_URL: ${{ secrets.NUXT_SLACK_WEBHOOK_URL }}
 
-      - name: Build application
-        run: pnpm build
-        env:
-          NUXT_GITHUB_OWNER: ${{ vars.NUXT_GITHUB_OWNER }}
-          NUXT_GITHUB_REPO: ${{ vars.NUXT_GITHUB_REPO }}
-          NUXT_PRODUCTION_URL: ${{ vars.NUXT_PRODUCTION_URL }}
-          NUXT_GITHUB_TOKEN: ${{ secrets.NUXT_GITHUB_TOKEN }}
-          NUXT_SLACK_WEBHOOK_URL: ${{ secrets.NUXT_SLACK_WEBHOOK_URL }}
-
-      - name: Deploy to NuxtHub
-        uses: nuxt-hub/action@v1
-        id: deploy
+      - name: Build & Deploy to NuxtHub
+        uses: nuxt-hub/action@v2
         with:
           project-key: nq-feedback-4u0k
-          directory: backend/dist
+          directory: backend
