--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -8,10 +8,6 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    defaults:
-      run:
-        working-directory: backend
-
     steps:
       - uses: actions/checkout@v4
 
@@ -26,6 +22,10 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Build widget
+        run: pnpm run build
+        working-directory: widget
 
       - name: Build & Deploy to NuxtHub
         uses: nuxt-hub/action@v2
